// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plancache.sql > line 8 1`] = `
[
  "PREPARE prepstmt AS SELECT * FROM pcachetest",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "prepstmt",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 34,
                      "relname": "pcachetest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 10 1`] = `
[
  "EXECUTE prepstmt",
  {
    "stmts": [
      {
        "stmt": {
          "ExecuteStmt": {
            "name": "prepstmt",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 13 1`] = `
[
  "PREPARE prepstmt2(bigint) AS SELECT * FROM pcachetest WHERE q1 = $1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "argtypes": [
              {
                "TypeName": {
                  "location": 18,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "name": "prepstmt2",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 43,
                      "relname": "pcachetest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "q1",
                            },
                          },
                        ],
                        "location": 60,
                      },
                    },
                    "location": 63,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ParamRef": {
                        "location": 65,
                        "number": 1,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 18 1`] = `
[
  "DROP TABLE pcachetest",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "pcachetest",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 25 1`] = `
[
  "CREATE TEMP TABLE pcachetest AS SELECT * FROM int8_tbl ORDER BY 2",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 18,
                "relname": "pcachetest",
                "relpersistence": "t",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "int8_tbl",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 64,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 39,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 39,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 32 1`] = `
[
  "ALTER TABLE pcachetest ADD COLUMN q3 bigint",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "ColumnDef": {
                      "colname": "q3",
                      "is_local": true,
                      "location": 34,
                      "typeName": {
                        "location": 37,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  "subtype": "AT_AddColumn",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "pcachetest",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 38 1`] = `
[
  "ALTER TABLE pcachetest DROP COLUMN q3",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "name": "q3",
                  "subtype": "AT_DropColumn",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "pcachetest",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 45 1`] = `
[
  "CREATE TEMP VIEW pcacheview AS
  SELECT * FROM pcachetest",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 47,
                      "relname": "pcachetest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 40,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 40,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 17,
              "relname": "pcacheview",
              "relpersistence": "t",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 48 1`] = `
[
  "PREPARE vprep AS SELECT * FROM pcacheview",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "vprep",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 31,
                      "relname": "pcacheview",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 24,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 24,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 52 1`] = `
[
  "CREATE OR REPLACE TEMP VIEW pcacheview AS
  SELECT q1, q2/2 AS q2 FROM pcachetest",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 71,
                      "relname": "pcachetest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 51,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "q1",
                              },
                            },
                          ],
                          "location": 51,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 55,
                      "name": "q2",
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "q2",
                                  },
                                },
                              ],
                              "location": 55,
                            },
                          },
                          "location": 57,
                          "name": [
                            {
                              "String": {
                                "sval": "/",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 2,
                              },
                              "location": 58,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
            "replace": true,
            "view": {
              "inh": true,
              "location": 28,
              "relname": "pcacheview",
              "relpersistence": "t",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 73 1`] = `
[
  "select cache_test(1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 18,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "cache_test",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 80 1`] = `
[
  "  select 2+2 as f1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "name": "f1",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 9,
                        },
                      },
                      "location": 10,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 11,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 82 1`] = `
[
  "create function cache_test_2() returns int as $$
begin
	return f1 from v1;
end$$ language plpgsql",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "cache_test_2",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
	return f1 from v1;
end",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 81,
                },
              },
            ],
            "returnType": {
              "location": 39,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 87 1`] = `
[
  "select cache_test_2()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "cache_test_2",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 89 1`] = `
[
  "create or replace temp view v1 as
  select 2+2+4 as f1",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 43,
                      "name": "f1",
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 43,
                                },
                              },
                              "location": 44,
                              "name": [
                                {
                                  "String": {
                                    "sval": "+",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 45,
                                },
                              },
                            },
                          },
                          "location": 46,
                          "name": [
                            {
                              "String": {
                                "sval": "+",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 4,
                              },
                              "location": 47,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
            "replace": true,
            "view": {
              "inh": true,
              "location": 28,
              "relname": "v1",
              "relpersistence": "t",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 93 1`] = `
[
  "create or replace temp view v1 as
  select 2+2+4+(select max(unique1) from tenk1) as f1",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 43,
                      "name": "f1",
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 2,
                                      },
                                      "location": 43,
                                    },
                                  },
                                  "location": 44,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "+",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 2,
                                      },
                                      "location": 45,
                                    },
                                  },
                                },
                              },
                              "location": 46,
                              "name": [
                                {
                                  "String": {
                                    "sval": "+",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 4,
                                  },
                                  "location": 47,
                                },
                              },
                            },
                          },
                          "location": 48,
                          "name": [
                            {
                              "String": {
                                "sval": "+",
                              },
                            },
                          ],
                          "rexpr": {
                            "SubLink": {
                              "location": 49,
                              "subLinkType": "EXPR_SUBLINK",
                              "subselect": {
                                "SelectStmt": {
                                  "fromClause": [
                                    {
                                      "RangeVar": {
                                        "inh": true,
                                        "location": 75,
                                        "relname": "tenk1",
                                        "relpersistence": "p",
                                      },
                                    },
                                  ],
                                  "limitOption": "LIMIT_OPTION_DEFAULT",
                                  "op": "SETOP_NONE",
                                  "targetList": [
                                    {
                                      "ResTarget": {
                                        "location": 57,
                                        "val": {
                                          "FuncCall": {
                                            "args": [
                                              {
                                                "ColumnRef": {
                                                  "fields": [
                                                    {
                                                      "String": {
                                                        "sval": "unique1",
                                                      },
                                                    },
                                                  ],
                                                  "location": 61,
                                                },
                                              },
                                            ],
                                            "funcformat": "COERCE_EXPLICIT_CALL",
                                            "funcname": [
                                              {
                                                "String": {
                                                  "sval": "max",
                                                },
                                              },
                                            ],
                                            "location": 57,
                                          },
                                        },
                                      },
                                    },
                                  ],
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
            "replace": true,
            "view": {
              "inh": true,
              "location": 28,
              "relname": "v1",
              "relpersistence": "t",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 100 1`] = `
[
  "  create table abc (f1 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 15,
              "relname": "abc",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 102 1`] = `
[
  "create schema s2
  create table abc (f1 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaElts": [
              {
                "CreateStmt": {
                  "oncommit": "ONCOMMIT_NOOP",
                  "relation": {
                    "inh": true,
                    "location": 32,
                    "relname": "abc",
                    "relpersistence": "p",
                  },
                  "tableElts": [
                    {
                      "ColumnDef": {
                        "colname": "f1",
                        "is_local": true,
                        "location": 37,
                        "typeName": {
                          "location": 40,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  ],
                },
              },
            ],
            "schemaname": "s2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 105 1`] = `
[
  "insert into s1.abc values(123)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "abc",
              "relpersistence": "p",
              "schemaname": "s1",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 123,
                            },
                            "location": 26,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 108 1`] = `
[
  "set search_path = s1",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 18,
                  "sval": {
                    "sval": "s1",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "search_path",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 110 1`] = `
[
  "prepare p1 as select f1 from abc",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "p1",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 29,
                      "relname": "abc",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 21,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 21,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 116 1`] = `
[
  "select f1 from abc",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "abc",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 120 1`] = `
[
  "alter table s1.abc add column f2 float8",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "ColumnDef": {
                      "colname": "f2",
                      "is_local": true,
                      "location": 30,
                      "typeName": {
                        "location": 33,
                        "names": [
                          {
                            "String": {
                              "sval": "float8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  "subtype": "AT_AddColumn",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "abc",
              "relpersistence": "p",
              "schemaname": "s1",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 124 1`] = `
[
  "drop schema s1 cascade",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "String": {
                  "sval": "s1",
                },
              },
            ],
            "removeType": "OBJECT_SCHEMA",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 127 1`] = `
[
  "reset search_path",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "search_path",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 133 1`] = `
[
  "prepare p2 as select nextval('seq')",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "p2",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 21,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 29,
                                "sval": {
                                  "sval": "seq",
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "nextval",
                              },
                            },
                          ],
                          "location": 21,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 137 1`] = `
[
  "drop sequence seq",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "seq",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_SEQUENCE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 139 1`] = `
[
  "create temp sequence seq",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSeqStmt": {
            "sequence": {
              "inh": true,
              "location": 21,
              "relname": "seq",
              "relpersistence": "t",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 157 1`] = `
[
  "select cachebug()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "cachebug",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 162 1`] = `
[
  "create table pc_list_parted (a int) partition by list(a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 36,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 54,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_LIST",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "pc_list_parted",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 188 1`] = `
[
  "prepare test_mode_pp (int) as select count(*) from test_mode where a = $1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "argtypes": [
              {
                "TypeName": {
                  "location": 22,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "name": "test_mode_pp",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 51,
                      "relname": "test_mode",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 37,
                      "val": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 37,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 67,
                      },
                    },
                    "location": 69,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ParamRef": {
                        "location": 71,
                        "number": 1,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 193 1`] = `
[
  "set plan_cache_mode to auto",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 23,
                  "sval": {
                    "sval": "auto",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "plan_cache_mode",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 209 1`] = `
[
  " -- 4x
select name, generic_plans, custom_plans from pg_prepared_statements
  where  name = 'test_mode_pp'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 53,
                  "relname": "pg_prepared_statements",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 20,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "generic_plans",
                          },
                        },
                      ],
                      "location": 20,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 35,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "custom_plans",
                          },
                        },
                      ],
                      "location": 35,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 85,
                  },
                },
                "location": 90,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 92,
                    "sval": {
                      "sval": "test_mode_pp",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 217 1`] = `
[
  "explain (costs off) execute test_mode_pp(2)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "ExecuteStmt": {
                "name": "test_mode_pp",
                "params": [
                  {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 41,
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`plancache.sql > line 225 1`] = `
[
  "drop table test_mode",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "test_mode",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
